--- a/angular-2-getting-started/index.html
+++ b/angular-2-getting-started/index.html
@@ -19,13 +19,12 @@
     <!-- Configure SystemJS -->
     <script src="systemjs.config.js"></script>
     <script>
-      System.import('app').catch(function(err){ console.error(err); });
+      System.import('app').catch(function(err){ console.error(err); }); 
     </script>
 </head>
 
 <body>
-    <pm-app></pm-app>
-    Starter files for the course
+    <pm-app>Loading App...</pm-app>
 </body>
 
 </html>
